# vibeparser

./: LICENSE  README.md  pyproject.toml
examples/: calculator.py  json_grammar.py  pl0.py  tiny_basic.py
src/grammar/: __init__.py  core.py
src/vibeparser/: core.py
